[front/Feature] Style.json and CoreBiz assets

--- a/corebiz-store/store/blocks/home/home.jsonc
+++ b/corebiz-store/store/blocks/home/home.jsonc
@@ -245,12 +245,12 @@
       "height": "auto",
       "images": [
         {
-          "image": "https://hiringcoders2021.vteximg.com.br/arquivos/banner-upMedal_01.png",
-          "mobileImage": "https://hiringcoders2021.vteximg.com.br/arquivos/banner-upMedal_01.png"
+          "image": "https://theygsgroup.com/wp-content/themes/ygssite/img/blog-post-hero.jpg",
+          "mobileImage": "https://theygsgroup.com/wp-content/themes/ygssite/img/blog-post-hero.jpg"
         },
         {
-          "image": "https://hiringcoders2021.vteximg.com.br/arquivos/banner-upMedal_02.png",
-          "mobileImage": "https://hiringcoders2021.vteximg.com.br/arquivos/banner-upMedal_02.png"
+          "image": "https://theygsgroup.com/wp-content/themes/ygssite/img/blog-post-hero.jpg",
+          "mobileImage": "https://theygsgroup.com/wp-content/themes/ygssite/img/blog-post-hero.jpg"
         }
       ]
     }
