[feature/menu] create menu structure

--- a/corebiz-store/store/blocks/header/header.jsonc
+++ b/corebiz-store/store/blocks/header/header.jsonc
@@ -7,8 +7,8 @@
   },
   "header-layout.desktop": {
     "children": [
-      "sticky-layout#desktop"
-      // Criar Menu Departamentos
+      "sticky-layout#desktop",
+      "flex-layout.row#header"
     ]
   },
   "sticky-layout#desktop": {
