[feature/values] implementação de pagina quem somos

--- a/corebiz-store/store/routes.jsonc
+++ b/corebiz-store/store/routes.jsonc
@@ -1,5 +1,5 @@
 {
-	"store.custom#landingPageExample": {
-		"path": "/landingpageexample"
+	"store.custom#quem-somos": {
+		"path": "/quem-somos"
 	}
 }
