[feature/top] icon button login

--- a/corebiz-store/store/blocks/header/header.jsonc
+++ b/corebiz-store/store/blocks/header/header.jsonc
@@ -121,6 +121,12 @@
       "width": "150"
     }
   },
+  "login": {
+    "props": {
+      "showIconProfile": true,
+      "hideIconLabel": true
+    }
+  },
   
   "drawer": {
     "children": []
