--- a/corebiz-store/store/blocks/slider-layout.jsonc
+++ b/corebiz-store/store/blocks/slider-layout.jsonc
@@ -23,53 +23,53 @@
 
       "image#brand1": {
         "props": {
-          "src": "assets/logo1.png"
+          "src": "assets/logos/logo1.png"
         }
       },
     
       "image#brand2": {
         "props": {
-            "src": "assets/logo2.png"
+            "src": "assets/logos/logo2.png"
         }
       },
       "image#brand3": {
         "props": {
-            "src": "assets/logo3.png"
+            "src": "assets/logos/logo3.png"
         }
       },
       "image#brand4": {
         "props": {
-            "src": "assets/logo4.png"
+            "src": "assets/logos/logo4.png"
         }
       },
       "image#brand5": {
         "props": {
-            "src": "assets/logo5.png"
+            "src": "assets/logos/logo5.png"
         }
       },
       "image#brand6": {
         "props": {
-            "src": "assets/logo2.png"
+            "src": "assets/logos/logo2.png"
         }
       },
       "image#brand7": {
         "props": {
-            "src": "assets/logo7.png"
+            "src": "assets/logos/logo7.png"
         }
       },
       "image#brand8": {
         "props": {
-            "src": "assets/logo8.png"
+            "src": "assets/logos/logo8.png"
         }
       },
       "image#brand9": {
         "props": {
-            "src": "assets/logo9.png"
+            "src": "assets/logos/logo9.png"
         }
       },
       "image#brand10": {
         "props": {
-            "src": "assets/logo10.png"
+            "src": "assets/logos/logo10.png"
         }
       }
     
