--- a/corebiz-store/store/blocks/slider-layout.jsonc
+++ b/corebiz-store/store/blocks/slider-layout.jsonc
@@ -1,6 +1,9 @@
 {
     "flex-layout.row#slider-brands":{
-        "children": ["flex-layout.row#slider-brand-container"]
+      "props": {
+        "blockClass": "section-brands"
+      },
+      "children": ["flex-layout.row#slider-brand-container"]
     },
 
     "flex-layout.row#slider-brand-container":{
