[feature/hero-values] includes images and adjusts css hero

--- a/corebiz-store/store/blocks/home/home.jsonc
+++ b/corebiz-store/store/blocks/home/home.jsonc
@@ -7,8 +7,8 @@
 			// Section Institucional > Valores Corebiz
 			"flex-layout.row#title-container",
 			"flex-layout.row#valores",
-			"flex-layout.row#about-us-container",
-      		"flex-layout.row#slider-brands",
+			// "flex-layout.row#about-us-container",
+      "flex-layout.row#slider-brands",
 			"cadastro"
 		]
 	},
