[feature/admin] Get and show leads

--- a/corebiz-admin/manifest.json
+++ b/corebiz-admin/manifest.json
@@ -2,7 +2,7 @@
   "name": "corebiz-admin",
   "vendor": "hiringcoders202112",
   "version": "0.0.12",
-  "title": "Example Admin App",
+  "title": "Leads Admin App",
   "description": "",
   "mustUpdateAt": "2022-08-28",
   "scripts": {
